--- a/auth_service/src/AuthService/templates/auth/client/client_list.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_list.html
@@ -1,61 +1,76 @@
-<html>
-    <head>
-        <title>Clients Management</title>
-        <style>
-            table {
-              font-family: arial, sans-serif;
-              border-collapse: collapse;
-              width: 100%;
-            }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clients Management</title>
 
-            td, th {
-              border: 1px solid #dddddd;
-              text-align: left;
-              padding: 8px;
-            }
+  <!-- GOOGLE FONT LATO -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ static_url("css/wu-labs-style.css") }}">
 
-            tr:nth-child(even) {
-              background-color: #dddddd;
-            }
-        </style>
-    </head>
+</head>
 
-   <body>
-   {% if clients %}
-   <h2>Clients list:</h2>
-   <table>
-      <tr>
-        <td>Name</td>
-        <td>Type</td>
-        <td>Authorized</td>
-        <td>Created At</td>
-        <td>Updated At</td>
-        <td>Edit</td>
-        <td>Delete</td>
-      </tr>
-        {% for client in clients %}
-        <tr>
-            <td>{{ client.name }}</td>
-            <td>{{ client.type.value }}</td>
-            <td>{{ client.authorized }}</td>
-            <td>{{ client.created_at }}</td>
-            <td>{{ client.updated_at }}</td>
-            <td><a href="{{ reverse_url('client_edit', client.id) }}">Edit</a></td>
-            <td>
-                <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
-                    <input type="submit" value="Delete"/>
+<body>
+
+  <div class="l-wrapper">
+    <section class="u-py-48 u-bg-light-gray">
+      <div class="l-container u-text-center">
+
+        {% if clients %}
+        <h1 class="u-mb-32 u-text-uppercase">Clients list:</h1>
+
+        <div class="c-table-responsive">
+          <table>
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Authorized</th>
+                <th>Client ID</th>
+                <th>Client Secret</th>
+                <th>Created At</th>
+                <th>Updated At</th>
+                <th>Edit</th>
+                <th>Delete</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for client in clients %}
+              <tr>
+                <td>{{ client.name }}</td>
+                <td style="min-width: 150px;">{{ client.type.value }}</td>
+                <td>{{ client.authorized }}</td>
+                <td>{{ client.client_id }}</td>
+                <td>{{ client.client_secret }}</td>
+                <td>{{ client.created_at }}</td>
+                <td>{{ client.updated_at }}</td>
+                <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+                <td>
+                  <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
+                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
                     {% module xsrf_form_html() %}
-                </form>
-            </td>
-        </tr>
+                  </form>
+                </td>
+              </tr>
+              {% end %}
+            </tbody>
+          </table>
+        </div>
+
+        {% else %}
+        <p class="c-lead">No clients were added. Please add some clients first!</p>
         {% end %}
-    </table>
-   {% else %}
-   <h2>No clients were added. Please add some clients first!</h2>
-   {% end %}
-    <div>
-      <a href="{{ reverse_url('client_addition') }}">Add new client</a>
-      <p><strong>Note: </strong> All times are in UTC timezone.</p>
-    </div>
-   </body>
+        <div class="u-mt-32">
+          <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--big">Add new client</a>
+          <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
+        </div>
+
+      </div><!-- /.l-container -->
+    </section>
+  </div>
+
+</body>
+
 </html>
