--- a/auth_service/src/AuthService/templates/auth/form.html
+++ b/auth_service/src/AuthService/templates/auth/form.html
@@ -1,20 +1,31 @@
-<form action="{{ request.path }}" method="post">
-     {% if result %}
-     <h2>{{ result }}</h2>
-     {% end %}
+<form action="{{ request.path }}" method="post" class="c-form">
+  {% if result %}
+  <p class="c-lead u-mb-32">{{ result }}</p>
+  {% end %}
 
-     {% for field in form %}
-         {% raw field.label() %}
-         {% raw field() %}
-         {% if field.errors %}
-            <ul class="errors">
-                {% for error in field.errors %}
-                <li>{{ error }}</li>
-                {% end %}
-            </ul>
-         {% end %}
-     {% end %}
+  {% for field in form %}
+  
+    <div class="c-form__group u-text-left">
+      <div class="c-form__label-container">
+        {% raw field.label() %}
+      </div>
+      <div class="c-form__input-container">
+        {% raw field() %}
+      </div>
+    </div>
 
-   <div><input type="submit" value="{{ action }}"/></div>
-   {% module xsrf_form_html() %}
- </form>
+    {% if field.errors %}
+    <ul class="errors">
+      {% for error in field.errors %}
+      <li>{{ error }}</li>
+      {% end %}
+    </ul>
+    {% end %}
+
+  {% end %}
+
+  <div class="u-mt-32">
+    <button type="submit" class="c-button c-button--lg">{{ action }} Client</button>
+  </div>
+  {% module xsrf_form_html() %}
+</form>
