--- a/src/AuthService/templates/auth/api/api_list.html
+++ b/src/AuthService/templates/auth/api/api_list.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-light-gray">
+    <section class="u-py-48 u-bg-light-gray l-viewport-center">
       <div class="l-container u-text-center">
 
         {% if apis %}
