--- a/src/AuthService/templates/auth/client/client_edit.html
+++ b/src/AuthService/templates/auth/client/client_edit.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-gray">
+    <section class="u-py-48 u-bg-gray l-viewport-center">
       <div class="l-container u-text-center">
 
         <h1 class="u-mb-32 u-text-uppercase">Edit Client</h1>
