--- a/src/AuthService/static/css/wu-labs-style.css
+++ b/src/AuthService/static/css/wu-labs-style.css
@@ -58,6 +58,18 @@ textarea:focus {
   outline: none;
 }
 
+hr {
+  border: 0;
+  margin: 48px 0;
+  height: 1px;
+  background-color: #ddd;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
 /*=========================================
 | TYPOGRAPHY
 =========================================*/
@@ -66,12 +78,20 @@ h1 {
   font: normal 300 4rem/1.3 var(--sans-serif-stack);
 }
 
-.c-lead {
-  font: normal 400 2.2rem/1.4 var(--sans-serif-stack);
+h2 {
+  font: normal 300 3.2rem/1.3 var(--sans-serif-stack);
+}
+
+h3 {
+  font: normal 300 2.6rem/1.3 var(--sans-serif-stack);
 }
 
 h4 {
   font: normal 700 1.9rem/1.5 var(--sans-serif-stack);
+}
+
+.c-lead {
+  font: normal 400 2.2rem/1.4 var(--sans-serif-stack);
 }
 
 /*=========================================
@@ -85,6 +105,12 @@ h4 {
   margin-right: auto;
   max-width: 41.4rem;
   width: 100%;
+}
+
+.l-viewport-center {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;  
 }
 
 /*=========================================
@@ -158,6 +184,12 @@ h4 {
   border-color: var(--accent-color-1);
 }
 
+.c-button a,
+.c-button a:hover,
+.c-button a:focus {
+  text-decoration: none;
+}
+
 /*=========================================
 | TABLE CSS
 =========================================*/
@@ -207,6 +239,15 @@ tbody tr:nth-child(even) {
   background-color: var(--bg-gray);
 }
 
+.c-dictionary-table th {
+  width: 190px;
+}
+
+.c-dictionary-table th,
+.c-dictionary-table td {
+  border: 0;
+}
+
 /*=========================================
 | FORM CSS
 =========================================*/
@@ -245,6 +286,11 @@ tbody tr:nth-child(even) {
   height: 4rem;
   padding: .5rem 1rem;
   width: 100%;
+}
+
+.c-form select[multiple] {
+  height: auto;
+  min-height: 4rem;
 }
 
 .c-form textarea {
@@ -290,6 +336,14 @@ tbody tr:nth-child(even) {
 
 .u-mb-32 {
   margin-bottom: 3.2rem;
+}
+
+.u-mb-40 {
+  margin-bottom: 4rem;
+}
+
+.u-mb-48 {
+  margin-bottom: 4.8rem;
 }
 
 .u-my-32 {
