--- a/src/AuthService/templates/auth/api/api_addition.html
+++ b/src/AuthService/templates/auth/api/api_addition.html
@@ -15,10 +15,13 @@
 <body>
 
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-gray">
+    <section class="u-py-48 u-bg-gray l-viewport-center">
       <div class="l-container u-text-center">
 
-        <h1 class="u-mb-32 u-text-uppercase">Add API</h1>
+        <div class="u-mb-32">
+          <h1 class="u-text-uppercase">Add API</h1>
+          <p>or go back to <a href="{{ reverse_url('api_list') }}">APIs list</a></p>
+        </div>
 
         <div>
           {%
