--- a/src/AuthService/templates/auth/client/client_detail.html
+++ b/src/AuthService/templates/auth/client/client_detail.html
@@ -7,7 +7,7 @@
 
   <!-- GOOGLE FONT LATO -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ static_url("css/wu-labs-style.css") }}">
 
 </head>
@@ -15,39 +15,66 @@
 <body>
 
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-light-gray">
+    <section class="u-py-48 u-bg-light-gray l-viewport-center">
       <div class="l-container u-text-center">
 
-        <h1 class="u-mb-32 u-text-uppercase">{{ client.name }}</h1>
-        <h3>Name: {{ client.name }}</h3>
-        <h3>Type: {{ client.type.value }}</h3>
-        <h3>Authorized:
-            {% if client.authorized %}
-            <span style="font-style: italic; font-weight: bolder; color: green;">
-                Yes
-            </span>
-            {% else %}
-            <span style="font-style: italic; font-weight: bolder; color: red;">
-                No
-            </span>
-            {% end %}
-        </h3>
-        <h3>Client ID: {{ client.client_id }}</h3>
-        <h3>Client Secret: {{ client.client_secret }}</h3>
-        <h3>Created At: {{ client.created_at }}</h3>
-        <h3>Updated At: {{ client.updated_at }}</h3>
-        <button type="button" class="c-button c-button--sm c-button--outline">
-            <a href="{{ reverse_url('client_edit', client.id) }}">Edit</a>
-        </button>
-        <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
-          <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
-          {% module xsrf_form_html() %}
-        </form>
-
-        <hr>
+        <h1 class="u-mb-16 u-text-uppercase u-text-left">{{ client.name }}</h1>
+        <div class="c-table-responsive u-mb-48">
+          <table class="c-dictionary-table">
+            <tbody>
+              <tr>
+                <th>Client Name:</th>
+                <td>{{ client.name }}</td>
+              </tr>
+              <tr>
+                <th>Client Type:</th>
+                <td>{{ client.type.value }}</td>
+              </tr>
+              <tr>
+                <th>Client Authorized:</th>
+                <td style="font-style: italic; font-weight: 700;">
+                  {% if client.authorized %}
+                  <span style="color: var(--accent-color-1);">Yes</span>
+                  {% else %}
+                  <span style="color: red;">No</span>
+                  {% end %}
+                </td>
+              </tr>
+              <tr>
+                <th>Client ID:</th>
+                <td>{{ client.client_id }}</td>
+              </tr>
+              <tr>
+                <th>Client Secret:</th>
+                <td>{{ client.client_secret }}</td>
+              </tr>
+              <tr>
+                <th>Client CreatedAt:</th>
+                <td>{{ client.created_at }}</td>
+              </tr>
+              <tr>
+                <th>Client UpdatedAt:</th>
+                <td>{{ client.updated_at }}</td>
+              </tr>
+              <tr>
+                <th>Edit Client:</th>
+                <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+              </tr>
+              <tr>
+                <th>Delete Client:</th>
+                <td>
+                  <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
+                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
+                    {% module xsrf_form_html() %}
+                  </form>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
         {% if client.apis %}
-        <h2>Client APIs:</h2>
+        <h3 class="u-mb-16 u-text-uppercase u-text-left">Client APIs:</h3>
         <div class="c-table-responsive">
           <table>
             <thead>
