--- a/src/AuthService/templates/auth/scope/scope_edit.html
+++ b/src/AuthService/templates/auth/scope/scope_edit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Wu Lab | Add Client</title>
+  <title>The Wu Lab | Edit Scope</title>
 
   <!-- GOOGLE FONT LATO -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,20 +14,17 @@
 
 <body>
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-gray l-viewport-center">
+    <section class="u-py-48 u-bg-gray">
       <div class="l-container u-text-center">
 
-        <div class="u-mb-32">
-          <h1 class="u-text-uppercase">Add Client</h1>
-          <p>or go back to <a href="{{ reverse_url('client_list') }}">Clients list</a></p>
-        </div>
+        <h1 class="u-mb-32 u-text-uppercase">Edit Scope</h1>
 
         <div>
           {%
             module Template(
-              "auth/form.html", result=result, form=form, action="Add Client"
+              "auth/form.html", result=result, form=form, action="Save Scope"
             )
-          %}          
+          %}
         </div>
 
       </div><!-- /.l-container -->
