--- a/auth_service/src/AuthService/templates/auth/api/api_edit.html
+++ b/auth_service/src/AuthService/templates/auth/api/api_edit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit API</title>
+  <title>The Wu Lab | Edit API</title>
 
   <!-- GOOGLE FONT LATO -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,7 +14,7 @@
 
 <body>
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-gray">
+    <section class="u-py-48 u-bg-gray l-viewport-center">
       <div class="l-container u-text-center">
 
         <h1 class="u-mb-32 u-text-uppercase">Edit API</h1>
@@ -22,7 +22,7 @@
         <div>
           {%
             module Template(
-              "auth/form.html", result=result, form=form, action="Save"
+              "auth/form.html", result=result, form=form, action="Save API"
             )
           %}
         </div>
