--- a/auth_service/src/AuthService/templates/auth/client/client_edit.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_edit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Client</title>
+  <title>The Wu Lab | Edit Client</title>
 
   <!-- GOOGLE FONT LATO -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,14 +14,14 @@
 
 <body>
   <div class="l-wrapper">
-    <section class="u-py-48 u-bg-gray">
+    <section class="u-py-48 u-bg-gray l-viewport-center">
       <div class="l-container u-text-center">
 
         <h1 class="u-mb-32 u-text-uppercase">Edit Client</h1>
 
         {%
           module Template(
-            "auth/form.html", result=result, form=form, action="Save"
+            "auth/form.html", result=result, form=form, action="Save Client"
           )
         %}
 
