--- a/auth_service/src/AuthService/templates/auth/form.html
+++ b/auth_service/src/AuthService/templates/auth/form.html
@@ -25,7 +25,7 @@
   {% end %}
 
   <div class="u-mt-32">
-    <button type="submit" class="c-button c-button--lg">{{ action }} Client</button>
+    <button type="submit" class="c-button c-button--lg">{{ action }}</button>
   </div>
   {% module xsrf_form_html() %}
 </form>
