--- a/auth_service/src/AuthService/templates/auth/api/api_detail.html
+++ b/auth_service/src/AuthService/templates/auth/api/api_detail.html
@@ -34,6 +34,7 @@
                 <th>API Description:</th>
                 <td>{{ api.description }}</td>
               </tr>
+              {% if current_user.is_admin %}
               <tr>
                 <th>Edit API:</th>
                 <td><a href="{{ reverse_url('api_edit', api.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
@@ -47,12 +48,17 @@
                   </form>
                 </td>
               </tr>
+              {% end %}
             </tbody>
           </table>
         </div>
 
+        {% if current_user.is_admin %}
         <h3 class="u-mb-16 u-text-uppercase u-text-left">API Clients:</h3>
-        {% if api.clients %}
+        {% else %}
+        <h3 class="u-mb-16 u-text-uppercase u-text-left">Your {{ api.name }} Clients:</h3>
+        {% end %}
+        {% if clients %}
         <div class="c-table-responsive">
           <table>
             <thead>
@@ -69,16 +75,16 @@
               </tr>
             </thead>
             <tbody>
-              {% for api_client in api.clients %}
+              {% for client in clients %}
                 <tr>
                 <td>
-                  <a href="{{ reverse_url('client_detail', api_client.client.id) }}">
-                    {{ api_client.client.name }}
+                  <a href="{{ reverse_url('client_detail', client.id) }}">
+                    {{ client.name }}
                   </a>
                 </td>
-                <td style="min-width: 150px;">{{ api_client.client.type.value }}</td>
+                <td style="min-width: 150px;">{{ client.type.value }}</td>
                 <td>
-                  {% if api_client.client.authorized %}
+                  {% if client.authorized %}
                   <span style="font-style: italic; font-weight: bold; color: var(--accent-color-1);">
                     Yes
                   </span>
@@ -88,13 +94,17 @@
                   </span>
                   {% end %}
                 </td>
-                <td>{{ api_client.client.client_id }}</td>
-                <td>{{ api_client.client.client_secret }}</td>
-                <td>{{ api_client.client.created_at }}</td>
-                <td>{{ api_client.client.updated_at }}</td>
-                <td><a href="{{ reverse_url('client_edit', api_client.client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+                <td>{{ client.client_id }}</td>
+                {% if current_user.id == client.user_id %}
+                <td>{{ client.client_secret }}</td>
+                {% else %}
+                <td style="font-style: italic;">hidden</td>
+                {% end %}
+                <td>{{ client.created_at }}</td>
+                <td>{{ client.updated_at }}</td>
+                <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
                 <td>
-                  <form action="{{ reverse_url('client_deletion', api_client.client.id) }}" method="post">
+                  <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
                     <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
                     {% module xsrf_form_html() %}
                   </form>
@@ -109,9 +119,12 @@
         <p class="c-lead">No clients were linked. Please link some clients first!</p>
         {% end %}
 
+        <p>TODO: Add specific API client</p>
+        <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--lg">Add new client</a>
+
         <hr>
 
-        <h2>API Allowed Scopes:</h2>
+        <h2>API Available Scopes:</h2>
         {% if api.scopes %}
         <div class="c-table-responsive">
           <table>
@@ -121,8 +134,10 @@
                 <th>Description</th>
                 <th>Created At</th>
                 <th>Updated At</th>
+                {% if current_user.is_admin %}
                 <th>Edit</th>
                 <th>Delete</th>
+                {% end %}
               </tr>
             </thead>
             <tbody>
@@ -136,6 +151,7 @@
                 <td>{{ scope.description }}</td>
                 <td>{{ scope.created_at }}</td>
                 <td>{{ scope.updated_at }}</td>
+                {% if current_user.is_admin %}
                 <td><a href="{{ reverse_url('scope_edit', api.id, scope.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
                 <td>
                   <form action="{{ reverse_url('scope_deletion', api.id, scope.id) }}" method="post">
@@ -143,18 +159,21 @@
                     {% module xsrf_form_html() %}
                   </form>
                 </td>
+                {% end %}
               </tr>
               {% end %}
             </tbody>
           </table>
         </div>
 
-        {% else %}
+        {% elif current_user.is_admin %}
         <p class="c-lead">No scopes were added. Please add some scopes first!</p>
         {% end %}
 
         <div class="u-mt-32">
+          {% if current_user.is_admin %}
           <a href="{{ reverse_url('scope_addition', api.id) }}" class="c-button c-button--lg">Add new Scope</a>
+          {% end %}
           <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
         </div>
 
