--- a/auth_service/src/AuthService/templates/auth/client/client_addition.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_addition.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Wu Lab | Add Client</title>
-
-  <!-- GOOGLE FONT LATO -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ static_url("css/wu-labs-style.css") }}">
-
-</head>
-
-<body>
-  <div class="l-wrapper">
+{% extends "../../base.html" %}
+{% block title %} | Add Client{% end %}
+{% block body %}
     <section class="u-py-48 u-bg-gray l-viewport-center">
       <div class="l-container u-text-center">
 
@@ -32,7 +19,4 @@
 
       </div><!-- /.l-container -->
     </section>
-  </div>
-</body>
-
-</html>
+{% end %}
