--- a/auth_service/src/AuthService/templates/auth/client/client_detail.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_detail.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Wu Lab | Client Details</title>
-
-  <!-- GOOGLE FONT LATO -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ static_url("css/wu-labs-style.css") }}">
-
-</head>
-
-<body>
-
-  <div class="l-wrapper">
+{% extends "../../base.html" %}
+{% block title %} | Client Details{% end %}
+{% block body %}
     <section class="u-py-48 u-bg-light-gray l-viewport-center">
       <div class="l-container u-text-center">
 
@@ -129,8 +115,4 @@
 
       </div><!-- /.l-container -->
     </section>
-  </div>
-
-</body>
-
-</html>
+{% end %}
