--- a/auth_service/src/AuthService/templates/auth/user/user_detail.html
+++ b/auth_service/src/AuthService/templates/auth/user/user_detail.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Wu Lab | User Detail</title>
-
-  <!-- GOOGLE FONT LATO -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ static_url("css/wu-labs-style.css") }}">
-
-</head>
-
-<body>
-  <div class="l-wrapper">
+{% extends "../../base.html" %}
+{% block title %} | User Detail{% end %}
+{% block body %}
     <section class="u-py-48 u-bg-gray">
       <div class="l-container u-text-center">
           <h1>{{ user.username }} details:</h1>
@@ -22,7 +9,4 @@
           <h2>Last time signed in with {{ user.identity_provider.value }}: {{ user.last_login }} UTC</h2>
       </div><!-- /.l-container -->
     </section>
-  </div>
-</body>
-
-</html>
+{% end %}
