--- a/auth_service/src/AuthService/templates/auth/client/client_list.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_list.html
@@ -43,7 +43,17 @@
                   {% end %}
                 </td>
                 <td>{{ client.client_id }}</td>
-                <td>{{ client.client_secret }}</td>
+                {% if current_user.id == client.user_id %}
+                <td>
+                  <a href="javascript: void(0);"
+                     onclick="this.innerHTML = '{{ client.raw_client_secret }}';
+                              this.style = 'pointer-events: none; color: #3b3b3b;';">
+                    Show
+                  </a>
+                </td>
+                {% else %}
+                <td style="font-style: italic;">hidden</td>
+                {% end %}
                 <td>{{ client.created_at }}</td>
                 <td>{{ client.updated_at }}</td>
                 <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
