Final styling tweaks

--- a/auth_service/src/AuthService/templates/auth/client/client_detail.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_detail.html
@@ -127,7 +127,7 @@
         <p class="c-lead">No APIs were linked. Please link some APIs first!</p>
         {% end %}
         <div class="u-mt-32">
-          <a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--big">Link an existing API</a>
+          <a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--lg">Link an existing API</a>
           <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
         </div>
 
