--- a/auth_service/src/AuthService/templates/auth/user/user_detail.html
+++ b/auth_service/src/AuthService/templates/auth/user/user_detail.html
@@ -117,7 +117,7 @@
         {% end %}
         <div class="u-mt-32">
           {% if current_user.id == user.id %}
-          <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--big">Add new client</a>
+          <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--lg">Add new client</a>
           {% end %}
           <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
         </div>
