--- a/auth_service/src/AuthService/templates/auth/api/api_detail.html
+++ b/auth_service/src/AuthService/templates/auth/api/api_detail.html
@@ -4,176 +4,186 @@
     <section class="u-py-48 u-bg-light-gray l-viewport-center">
       <div class="l-container u-text-center">
 
-        <h1 class="u-mb-16 u-text-uppercase u-text-left">{{ api.name }}</h1>
-        <div class="c-table-responsive u-mb-48">
-          <table class="c-dictionary-table">
-            <tbody>
-              <tr>
-                <th>API Name:</th>
-                <td>{{ api.name }}</td>
-              </tr>
-              <tr>
-                <th>API Identifier:</th>
-                <td>{{ api.identifier }}</td>
-              </tr>
-              <tr>
-                <th>API Description:</th>
-                <td>{{ api.description }}</td>
-              </tr>
-              {% if current_user.is_admin %}
-              <tr>
-                <th>Edit API:</th>
-                <td><a href="{{ reverse_url('api_edit', api.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
-              </tr>
-              <tr>
-                <th>Delete API:</th>
-                <td>
-                  <form action="{{ reverse_url('api_deletion', api.id) }}" method="post">
-                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
-                    {% module xsrf_form_html() %}
-                  </form>
-                </td>
-              </tr>
-              {% end %}
-            </tbody>
-          </table>
+        <div class="u-mb-48">
+          <h1 class="u-mb-16 u-text-uppercase u-text-left">{{ api.name }}</h1>
+          <div class="c-table-responsive">
+            <table class="c-dictionary-table">
+              <tbody>
+                <tr>
+                  <th>API Name:</th>
+                  <td>{{ api.name }}</td>
+                </tr>
+                <tr>
+                  <th>API Identifier:</th>
+                  <td>{{ api.identifier }}</td>
+                </tr>
+                <tr>
+                  <th>API Description:</th>
+                  <td>{{ api.description }}</td>
+                </tr>
+                {% if current_user.is_admin %}
+                <tr>
+                  <th>Edit API:</th>
+                  <td><a href="{{ reverse_url('api_edit', api.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+                </tr>
+                <tr>
+                  <th>Delete API:</th>
+                  <td>
+                    <form action="{{ reverse_url('api_deletion', api.id) }}" method="post">
+                      <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
+                      {% module xsrf_form_html() %}
+                    </form>
+                  </td>
+                </tr>
+                {% end %}
+              </tbody>
+            </table>
+          </div>
         </div>
 
-        {% if current_user.is_admin %}
-        <h3 class="u-mb-16 u-text-uppercase u-text-left">API Clients:</h3>
-        {% else %}
-        <h3 class="u-mb-16 u-text-uppercase u-text-left">Your {{ api.name }} Clients:</h3>
-        {% end %}
-        {% if clients %}
-        <div class="c-table-responsive">
-          <table>
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Authorized</th>
-                <th>Client ID</th>
-                <th>Client Secret</th>
-                <th>Created At</th>
-                <th>Updated At</th>
-                <th>Allowed Scopes</th>
-                <th>Edit</th>
-                <th>Delete</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for client in clients %}
-                <tr>
-                <td>
-                  <a href="{{ reverse_url('client_detail', client.id) }}">
-                    {{ client.name }}
-                  </a>
-                </td>
-                <td style="min-width: 150px;">{{ client.type.value }}</td>
-                <td>
-                  {% if client.authorized %}
-                  <span style="font-style: italic; font-weight: bold; color: var(--accent-color-1);">
-                    Yes
-                  </span>
-                  {% else %}
-                  <span style="font-style: italic; font-weight: bold; color: red;">
-                    No
-                  </span>
+        <div class="u-mb-64">
+
+          <div>
+            {% if current_user.is_admin %}
+            <h3 class="c-title-with-border u-text-uppercase u-text-left">API Clients:</h3>
+            {% else %}
+            <h3 class="c-title-with-border u-text-uppercase u-text-left">Your {{ api.name }} Clients:</h3>
+            {% end %}
+          </div>
+
+          <div class="u-mb-24">
+            {% if clients %}
+            <div class="c-table-responsive">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Authorized</th>
+                    <th>Client ID</th>
+                    <th>Client Secret</th>
+                    <th>Created At</th>
+                    <th>Updated At</th>
+                    <th>Allowed Scopes</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for client in clients %}
+                    <tr>
+                    <td>
+                      <a href="{{ reverse_url('client_detail', client.id) }}">
+                        {{ client.name }}
+                      </a>
+                    </td>
+                    <td style="min-width: 150px;">{{ client.type.value }}</td>
+                    <td>
+                      {% if client.authorized %}
+                      <span style="font-style: italic; font-weight: bold; color: var(--accent-color-1);">
+                        Yes
+                      </span>
+                      {% else %}
+                      <span style="font-style: italic; font-weight: bold; color: red;">
+                        No
+                      </span>
+                      {% end %}
+                    </td>
+                    <td>{{ client.client_id }}</td>
+                    {% if current_user.id == client.user_id %}
+                    <td>
+                      <a href="javascript: void(0);"
+                        onclick="this.innerHTML = '{{ client.raw_client_secret }}';
+                                  this.style = 'pointer-events: none; color: #3b3b3b;';">
+                        Show
+                      </a>
+                    </td>
+                    {% else %}
+                    <td style="font-style: italic;">hidden</td>
+                    {% end %}
+                    <td>{{ client.created_at }}</td>
+                    <td>{{ client.updated_at }}</td>
+                    <td><a href="{{ reverse_url('clientapi_scopes_edit', client.id, api.id) }}" class="c-button c-button--sm c-button--outline">Manage Allowed Scopes</a></td>
+                    <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+                    <td>
+                      <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
+                        <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
+                        {% module xsrf_form_html() %}
+                      </form>
+                    </td>
+                  </tr>
                   {% end %}
-                </td>
-                <td>{{ client.client_id }}</td>
-                {% if current_user.id == client.user_id %}
-                <td>
-                  <a href="javascript: void(0);"
-                     onclick="this.innerHTML = '{{ client.raw_client_secret }}';
-                              this.style = 'pointer-events: none; color: #3b3b3b;';">
-                    Show
-                  </a>
-                </td>
-                {% else %}
-                <td style="font-style: italic;">hidden</td>
-                {% end %}
-                <td>{{ client.created_at }}</td>
-                <td>{{ client.updated_at }}</td>
-                <td><a href="{{ reverse_url('clientapi_scopes_edit', client.id, api.id) }}" class="c-button c-button--sm c-button--outline">Manage Allowed Scopes</a></td>
-                <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
-                <td>
-                  <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
-                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
-                    {% module xsrf_form_html() %}
-                  </form>
-                </td>
-              </tr>
-              {% end %}
-            </tbody>
-          </table>
+                </tbody>
+              </table>
+            </div>
+            {% else %}
+            <p class="c-lead">No clients were linked. Please link some clients first!</p>
+            {% end %}
+          </div>
+
+          <div>
+            <a href="{{ reverse_url('api_client_addition', api.id) }}" class="c-button c-button--lg">Add new client</a>
+          </div>
+          
         </div>
 
-        {% else %}
-        <p class="c-lead">No clients were linked. Please link some clients first!</p>
-        {% end %}
-
-        <a href="{{ reverse_url('api_client_addition', api.id) }}" class="c-button c-button--lg">
-          Add new client
-        </a>
-
-        <hr>
-
-        <h2>API Available Scopes:</h2>
-        {% if api.scopes %}
-        <div class="c-table-responsive">
-          <table>
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Created At</th>
-                <th>Updated At</th>
-                {% if current_user.is_admin %}
-                <th>Edit</th>
-                <th>Delete</th>
-                {% end %}
-              </tr>
-            </thead>
-            <tbody>
-              {% for scope in api.scopes %}
+        <div>
+          <h3 class="c-title-with-border u-text-uppercase u-text-left">API Available Scopes:</h3>
+          {% if api.scopes %}
+          <div class="c-table-responsive">
+            <table>
+              <thead>
                 <tr>
-                {% if current_user.is_admin %}
-                <td>
-                  <a href="{{ reverse_url('scope_edit', api.id, scope.id) }}">
-                    {{ scope.name }}
-                  </a>
-                </td>
-                {% else %}
-                <td>{{ scope.name }}</td>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Created At</th>
+                  <th>Updated At</th>
+                  {% if current_user.is_admin %}
+                  <th>Edit</th>
+                  <th>Delete</th>
+                  {% end %}
+                </tr>
+              </thead>
+              <tbody>
+                {% for scope in api.scopes %}
+                  <tr>
+                  {% if current_user.is_admin %}
+                  <td>
+                    <a href="{{ reverse_url('scope_edit', api.id, scope.id) }}">
+                      {{ scope.name }}
+                    </a>
+                  </td>
+                  {% else %}
+                  <td>{{ scope.name }}</td>
+                  {% end %}
+                  <td>{{ scope.description }}</td>
+                  <td>{{ scope.created_at }}</td>
+                  <td>{{ scope.updated_at }}</td>
+                  {% if current_user.is_admin %}
+                  <td><a href="{{ reverse_url('scope_edit', api.id, scope.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+                  <td>
+                    <form action="{{ reverse_url('scope_deletion', api.id, scope.id) }}" method="post">
+                      <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
+                      {% module xsrf_form_html() %}
+                    </form>
+                  </td>
+                  {% end %}
+                </tr>
                 {% end %}
-                <td>{{ scope.description }}</td>
-                <td>{{ scope.created_at }}</td>
-                <td>{{ scope.updated_at }}</td>
-                {% if current_user.is_admin %}
-                <td><a href="{{ reverse_url('scope_edit', api.id, scope.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
-                <td>
-                  <form action="{{ reverse_url('scope_deletion', api.id, scope.id) }}" method="post">
-                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
-                    {% module xsrf_form_html() %}
-                  </form>
-                </td>
-                {% end %}
-              </tr>
-              {% end %}
-            </tbody>
-          </table>
-        </div>
+              </tbody>
+            </table>
+          </div>
 
-        {% elif current_user.is_admin %}
-        <p class="c-lead">No scopes were added. Please add some scopes first!</p>
-        {% end %}
-
-        <div class="u-mt-32">
-          {% if current_user.is_admin %}
-          <a href="{{ reverse_url('scope_addition', api.id) }}" class="c-button c-button--lg">Add new Scope</a>
+          {% elif current_user.is_admin %}
+          <p class="c-lead">No scopes were added. Please add some scopes first!</p>
           {% end %}
-          <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
+
+          <div class="u-mt-24">
+            {% if current_user.is_admin %}
+            <a href="{{ reverse_url('scope_addition', api.id) }}" class="c-button c-button--lg">Add new Scope</a>
+            {% end %}
+            <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
+          </div>
         </div>
 
       </div><!-- /.l-container -->
