--- a/auth_service/src/AuthService/templates/auth/client/client_list.html
+++ b/auth_service/src/AuthService/templates/auth/client/client_list.html
@@ -1,82 +1,82 @@
 {% extends "../../base.html" %}
 {% block title %} | Clients Management{% end %}
 {% block body %}
-    <section class="u-py-48 u-bg-light-gray l-viewport-center">
-      <div class="l-container u-text-center">
+  <section class="u-py-48 u-bg-light-gray l-viewport-center">
+    <div class="l-container u-text-center">
 
-        {% if clients %}
-        <h1 class="u-mb-32 u-text-uppercase">Clients list:</h1>
+      {% if clients %}
+      <h1 class="u-mb-32 u-text-uppercase">Clients list:</h1>
 
-        <div class="c-table-responsive">
-          <table>
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Authorized</th>
-                <th>Client ID</th>
-                <th>Client Secret</th>
-                <th>Created At</th>
-                <th>Updated At</th>
-                <th>Edit</th>
-                <th>Delete</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for client in clients %}
-              <tr>
-                <td>
-                  <a href="{{ reverse_url('client_detail', client.id) }}">
-                    {{ client.name }}
-                  </a>
-                </td>
-                <td style="min-width: 150px;">{{ client.type.value }}</td>
-                <td>
-                  {% if client.authorized %}
-                  <span style="font-style: italic; font-weight: bolder; color: var(--accent-color-1);">
-                    Yes
-                  </span>
-                  {% else %}
-                  <span style="font-style: italic; font-weight: bolder; color: red;">
-                    No
-                  </span>
-                  {% end %}
-                </td>
-                <td>{{ client.client_id }}</td>
-                {% if current_user.id == client.user_id %}
-                <td>
-                  <a href="javascript: void(0);"
-                     onclick="this.innerHTML = '{{ client.raw_client_secret }}';
-                              this.style = 'pointer-events: none; color: #3b3b3b;';">
-                    Show
-                  </a>
-                </td>
+      <div class="c-table-responsive">
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Type</th>
+              <th>Authorized</th>
+              <th>Client ID</th>
+              <th>Client Secret</th>
+              <th>Created At</th>
+              <th>Updated At</th>
+              <th>Edit</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for client in clients %}
+            <tr>
+              <td>
+                <a href="{{ reverse_url('client_detail', client.id) }}">
+                  {{ client.name }}
+                </a>
+              </td>
+              <td style="min-width: 150px;">{{ client.type.value }}</td>
+              <td>
+                {% if client.authorized %}
+                <span style="font-style: italic; font-weight: bolder; color: var(--accent-color-1);">
+                  Yes
+                </span>
                 {% else %}
-                <td style="font-style: italic;">hidden</td>
+                <span style="font-style: italic; font-weight: bolder; color: red;">
+                  No
+                </span>
                 {% end %}
-                <td>{{ client.created_at }}</td>
-                <td>{{ client.updated_at }}</td>
-                <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
-                <td>
-                  <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
-                    <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
-                    {% module xsrf_form_html() %}
-                  </form>
-                </td>
-              </tr>
+              </td>
+              <td>{{ client.client_id }}</td>
+              {% if current_user.id == client.user_id %}
+              <td>
+                <a href="javascript: void(0);"
+                    onclick="this.innerHTML = '{{ client.raw_client_secret }}';
+                            this.style = 'pointer-events: none; color: #3b3b3b;';">
+                  Show
+                </a>
+              </td>
+              {% else %}
+              <td style="font-style: italic;">hidden</td>
               {% end %}
-            </tbody>
-          </table>
-        </div>
+              <td>{{ client.created_at }}</td>
+              <td>{{ client.updated_at }}</td>
+              <td><a href="{{ reverse_url('client_edit', client.id) }}" class="c-button c-button--sm c-button--outline">Edit</a></td>
+              <td>
+                <form action="{{ reverse_url('client_deletion', client.id) }}" method="post">
+                  <button type="submit" class="c-button c-button--sm c-button--outline">Delete</button>
+                  {% module xsrf_form_html() %}
+                </form>
+              </td>
+            </tr>
+            {% end %}
+          </tbody>
+        </table>
+      </div>
 
-        {% else %}
-        <p class="c-lead">No clients were added. Please add some clients first!</p>
-        {% end %}
-        <div class="u-mt-32">
-          <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--big">Add new client</a>
-          <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
-        </div>
+      {% else %}
+      <p class="c-lead">No clients were added. Please add some clients first!</p>
+      {% end %}
+      <div class="u-mt-32">
+        <a href="{{ reverse_url('client_addition') }}" class="c-button c-button--lg">Add new client</a>
+        <p class="u-text-gray u-mt-16"><strong>Note: </strong> All times are in UTC timezone.</p>
+      </div>
 
-      </div><!-- /.l-container -->
-    </section>
+    </div><!-- /.l-container -->
+  </section>
 {% end %}
