Modify page branding

--- a/auth_service/src/AuthService/templates/auth/login.html
+++ b/auth_service/src/AuthService/templates/auth/login.html
@@ -4,7 +4,7 @@
   <section class="u-py-48 u-bg-gray l-viewport-center">
     <div class="l-container u-text-center">
 
-      <h1 class="u-mb-24">Login to The Wu Lab Auth Service</h1>
+      <h1 class="u-mb-24">Login to the BioThings Auth Service</h1>
 
       <div class="u-mb-48">
         {% if request.query_arguments.get("next") %}
