--- a/auth_service/src/AuthService/templates/base.html
+++ b/auth_service/src/AuthService/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Wu Lab Auth Service{% block title %}{% end %}</title>
+  <title>BioThings Auth Service{% block title %}{% end %}</title>
 
   <!-- GOOGLE FONT LATO -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -32,7 +32,7 @@
           <div class="c-navbar__logo">
             <a href="{{ reverse_url("home") }}">
               <!-- TODO: Add logo here if needed -->
-              <strong>The Wu Lab Auth Service</strong>
+              <strong>BioThings Auth Service</strong>
             </a>
           </div>
 
