--- a/auth_service/src/AuthService/templates/core/home.html
+++ b/auth_service/src/AuthService/templates/core/home.html
@@ -2,7 +2,7 @@
 {% block body %}
   <section class="u-py-48 u-bg-gray l-viewport-center">
     <div class="l-container u-text-center">
-      <h1>Welcome to The Wu Lab Auth Service</h1>
+      <h1>Welcome to the BioThings Auth Service</h1>
     </div><!-- /.l-container -->
   </section>
 {% end %}
